--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.2.0+3
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
