--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.2.0+3
   font_awesome_flutter: ^10.8.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
